--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,29 @@
 [package]
-name = "power-desk"
+name = "esp-i2c-shared-bus-embassy-issue"
 version = "0.1.0"
 authors = ["Ivan Li <ivanli2048@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-esp-backtrace = { version = "0.12.0", features = [
+esp-backtrace = { version = "0.13.0", features = [
     "esp32c3",
     "exception-handler",
     "panic-handler",
     "println",
 ] }
-esp-hal = { version = "0.18.0", features = ["esp32c3", "async"] }
-esp-hal-embassy = { version = "0.1.0", features = [
+esp-hal = { version = "0.19.0", features = ["esp32c3", "async"] }
+esp-hal-embassy = { version = "0.2.0", features = [
     "esp32c3",
-    "time-timg0",
     "integrated-timers",
 ] }
-esp-println = { version = "0.9.1", features = ["esp32c3", "log"] }
+esp-println = { version = "0.10.0", features = ["esp32c3", "log"] }
 log = { version = "0.4.21" }
 
 embedded-svc = { version = "0.28.0", default-features = false, features = [] }
 embedded-io = "0.6.1"
 
-esp-wifi = { version = "0.6.0", features = [
+esp-wifi = { version = "0.7.0", features = [
     "esp32c3",
     "phy-enable-usb",
     "utils",
